syntax = "proto3";
option java_multiple_files = false;
option java_package = "ds.zhuldyz.service5";
option java_outer_classname = "Service5Proto";

package appointment;

service AppointmentService {
  rpc BookAppointment (AppointmentRequest) returns (AppointmentResponse) {}
}

message AppointmentRequest {
  string patient_id = 1;
  string doctor_id = 2;
  string appointment_date = 3;
}

message AppointmentResponse {
  string appointment_id = 1;
}